docs/index.css
/*!
 *       __ _____                     ________                              __
 *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
 *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
 * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
 * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
 *           \/              /____/                              version 1.12.0
 * http://terminal.jcubic.pl
 *
 * This file is part of jQuery Terminal.
 *
 * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
 * Released under the MIT license
 *
 * Date: Fri, 02 Mar 2018 20:25:18 +0000
 */
.terminal .terminal-output .format, .cmd .format,
.cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
    display: inline-block;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6, .terminal pre, .cmd {
    margin: 0;
}
.terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6 {
    line-height: 1.2em;
}
/*
.cmd .mask {
    width: 10px;
    height: 11px;
    background: black;
    z-index: 100;
}
*/
.cmd .clipboard {
    position: absolute;
    left: -16px;
    top: 0;
    width: 20px;
    height: 16px;
    /* this seems to work after all on Android */
    /*left: -99999px;
    clip: rect(1px,1px,1px,1px);
    /* on desktop textarea appear when paste */
    /* opacity is needed for Edge and IE
    opacity: 0.01;
    filter: alpha(opacity = 0.01);
    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);*/
    background: transparent;
    border: none;
    color: transparent;
    outline: none;
    padding: 0;
    resize: none;
    z-index: 1000;
    overflow: auto;
    white-space: normal;
    text-indent: -9999em; /* better cursor hiding for Safari and IE */
}
.terminal img, .terminal value, .terminal audio, .terminal object, .terminal canvas {
    cursor: default;
}
.terminal .error {
    color: #f00;
}
.terminal {
    position: relative;
    overflow: auto;
    overflow-y: auto;
    overflow-x: auto;
	white-space: normal;
	word-wrap: normal;
	word-break: normal;
	overflow-wrap: break-word;
}
body.terminal {
    height: 100%;
    min-height: 100vh;
    margin: 0;
	word-wrap: normal;
	word-break: normal;
	overflow-wrap: break-word;
}
.terminal > div {
    height: 100%;
    overflow: auto;
}
.cmd {
    padding: 0;
    position: relative;
    /*margin-top: 3px; */
    float: left;
    padding-bottom: 3px;
	word-wrap: normal;
	word-break: normal;
	overflow-wrap: break-word;
}
.terminal a[tabindex="1000"],
.terminal a[tabindex="1000"]:active,
.terminal a[tabindex="1000"]:focus {
    outline: none;
}
.terminal .inverted, .cmd .inverted {
    background-color: #aaa;
    color: #000;
}
.cmd .cursor {
    border-bottom: 3px solid transparent;
    margin-bottom: -3px;
    background-clip: content-box;
}
.cmd .cursor.blink {
    -webkit-animation: terminal-blink 1s infinite steps(1, start);
       -moz-animation: terminal-blink 1s infinite steps(1, start);
        -ms-animation: terminal-blink 1s infinite steps(1, start);
            animation: terminal-blink 1s infinite steps(1, start);
    border-left: 1px solid transparent;
    margin-left: -1px;
}
.bar.terminal .inverted, .bar.cmd .inverted {
    border-left-color: #aaa;
}
.terminal .terminal-output div div, .cmd .prompt {
    display: block;
    line-height: 14px;
    height: auto;
	word-wrap: normal;
	word-break: normal;
	overflow-wrap: break-word;
}
.terminal .terminal-output > div:not(.raw) div {
    white-space: normal;
	word-wrap: normal;
	word-break: normal;
	overflow-wrap: break-word;
}
.cmd .prompt > span {
    float: left;
}
.terminal, .cmd {
    font-family: "space mono", monospace;
    /*font-family: FreeMono, monospace; this don't work on Android */
    color: #ffffff;
    background-color: #000;
    font-size: 16px;
    line-height: 14px;
    box-sizing: border-box;
    cursor: text;
}
.cmd div {
    clear: both;
}
.cmd .prompt + div {
    clear: right;
}
.terminal-output > div > div {
    min-height: 14px;
}
terminal .terminal-output > div {
    margin-top: -1px;
}
.terminal-output > div.raw > div * {
    overflow-wrap: normal;
    word-wrap: normal;
}
.terminal .font {
    position: absolute;
    font-size: inherit;
    width: 1em;
    height: 1em;
    top: -100%;
    left: 0;
    margin-bottom: 1px;
}
.terminal .terminal-output div span {
    display: inline-block;
}
.cmd > span:not(.prompt) {
    float: left;
}
.cmd .prompt span.line {
    display: block;
    float: none;
}
.terminal table {
    border-collapse: collapse;
}
.terminal td {
    border: 1px solid #aaa;
}
.terminal h1::-moz-selection,
.terminal h2::-moz-selection,
.terminal h3::-moz-selection,
.terminal h4::-moz-selection,
.terminal h5::-moz-selection,
.terminal h6::-moz-selection,
.terminal pre::-moz-selection,
.terminal td::-moz-selection,
.terminal .terminal-output div div::-moz-selection,
.terminal .terminal-output div span::-moz-selection,
.terminal .terminal-output div div a::-moz-selection,
.terminal .terminal-output .raw div::-moz-selection,
.cmd div::-moz-selection,
.cmd > span::-moz-selection,
.cmd > span span::-moz-selection,
.cmd > div::-moz-selection,
.cmd > div span::-moz-selection,
.cmd .prompt span::-moz-selection {
    background-color: #aaa;
    color: #000;
}
/* this don't work in Chrome
.terminal tr td::-moz-selection {
    border-color: #000;
}
.terminal tr td::selection {
    border-color: #000;
}
/* ... */

